2005-11-10  Laurent Sansonetti  <lrz@gnome.org>

	* TODO:

	Removed done points, added undo/redo.

	* lib/alexandria/ui/main_app.rb:

	Added actions tooltips.  Combo boxes in the toolbar do not have tooltips
	yet.

2005-11-09  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/renaud.rb (#url):

	Make sure we return nil if the book ISBN is not set.

2005-11-08  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/new_book_dialog.glade,
	  lib/alexandria/ui/new_book_dialog.rb:

	- Properly kill active threads when destroying the window and starting a
	  new search ;
	- Disable the whole window while searching.

	* AUTHORS,
	  lib/alexandria.rb:

	Added Mathieu.

2005-11-08  Mathieu Leduc-Hamel  <arrak@arrak.org>

	* lib/alexandria/book_providers.rb,
	  lib/alexandria/book_providers/renaud.rb:

	Added a provider to the Renaud-Bray library (Quebec).

2005-11-08  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/export_dialog.rb,
	  lib/alexandria/ui/import_dialog.rb:

	Do not launch the action when the window is destroyed.

2005-10-15  Alexander McCormmach  <alexander@tunicate.org> 

	* lib/alexandria/ui/main_app.rb:

	- Fixed rating column's min and max width to approx. five times
	  the width of the star pixbuf.

	* schemas/alexandria.schemas:

	- Added schema for cols_width property.
	
2005-10-15  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added Alexander.

2005-10-15  Alexander McCormmach  <alexander@tunicate.org> 

	* lib/alexandria/ui/main_app.rb:

	- Giving the filter entry box initial input focus ;
	- Fixed the reload keyboard shortcut ;
	- Remember the books table column widths.

	* data/alexandria/glade/main_app.glade:

	Side pane close button shouldn't grab input focus.

	* lib/alexandria/ui/book_properties_dialog.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb: 

	Fixed 'pressed' GtkButton events to 'clicked'.

2005-10-13  Laurent Sansonetti  <lrz@gnome.org>
